--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,43 +5,39 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-475.1KB/s(Youtube:不良林), server: x.mceee.xyz, port: 26031, type: vmess, uuid: bca2b267-61ac-3152-9525-ea1757f8d9f2, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-5.71MB/s(Youtube:不良林), server: hkaz3.xmrth-node.xyz, port: 14138, type: vmess, uuid: 6f0349b2-7484-3b32-98a5-04f3a857dde0, alterId: 2, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /index, ws-headers: {Host: hkaz3.xmrth-node.xyz}}
-  - {name: 🇨🇳 中国-726.6KB/s(Youtube:不良林), server: 180.163.62.91, port: 10064, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
-  - {name: 🇨🇳 中国-7.73MB/s(Youtube:不良林), server: cm-jm.okvpn.xyz, port: 20005, type: trojan, password: e5cf7069-e269-4926-bdb0-fbb39cde6a3a, sni: cm-jm.okvpn.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-964.2KB/s(Youtube:不良林), server: 180.163.62.91, port: 10065, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
+  - {name: 🇨🇦 加拿大-2.65MB/s(Youtube:不良林), server: 134.195.198.252, port: 4444, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
+  - {name: 🇨🇳 中国-8.23MB/s(Youtube:不良林), server: x.mceee.xyz, port: 26031, type: vmess, uuid: bca2b267-61ac-3152-9525-ea1757f8d9f2, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-2.83MB/s(Youtube:不良林), server: cm-jm.okvpn.xyz, port: 20005, type: trojan, password: e5cf7069-e269-4926-bdb0-fbb39cde6a3a, sni: cm-jm.okvpn.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-476.9KB/s(Youtube:不良林), server: z-cn2.mceee.xyz, port: 23331, type: vmess, uuid: bca2b267-61ac-3152-9525-ea1757f8d9f2, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /download, ws-headers: {Host: z-cn2.mceee.xyz}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-475.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.71MB/s(Youtube:不良林)
-      - 🇨🇳 中国-726.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.73MB/s(Youtube:不良林)
-      - 🇨🇳 中国-964.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.65MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.23MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.83MB/s(Youtube:不良林)
+      - 🇨🇳 中国-476.9KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-475.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.71MB/s(Youtube:不良林)
-      - 🇨🇳 中国-726.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.73MB/s(Youtube:不良林)
-      - 🇨🇳 中国-964.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.65MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.23MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.83MB/s(Youtube:不良林)
+      - 🇨🇳 中国-476.9KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-475.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.71MB/s(Youtube:不良林)
-      - 🇨🇳 中国-726.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.73MB/s(Youtube:不良林)
-      - 🇨🇳 中国-964.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.65MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.23MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.83MB/s(Youtube:不良林)
+      - 🇨🇳 中国-476.9KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -52,32 +48,29 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-475.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.71MB/s(Youtube:不良林)
-      - 🇨🇳 中国-726.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.73MB/s(Youtube:不良林)
-      - 🇨🇳 中国-964.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.65MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.23MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.83MB/s(Youtube:不良林)
+      - 🇨🇳 中国-476.9KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-475.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.71MB/s(Youtube:不良林)
-      - 🇨🇳 中国-726.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.73MB/s(Youtube:不良林)
-      - 🇨🇳 中国-964.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.65MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.23MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.83MB/s(Youtube:不良林)
+      - 🇨🇳 中国-476.9KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-475.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.71MB/s(Youtube:不良林)
-      - 🇨🇳 中国-726.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.73MB/s(Youtube:不良林)
-      - 🇨🇳 中国-964.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.65MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.23MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.83MB/s(Youtube:不良林)
+      - 🇨🇳 中国-476.9KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -93,11 +86,10 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-475.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.71MB/s(Youtube:不良林)
-      - 🇨🇳 中国-726.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.73MB/s(Youtube:不良林)
-      - 🇨🇳 中国-964.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.65MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.23MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.83MB/s(Youtube:不良林)
+      - 🇨🇳 中国-476.9KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
