--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,39 +5,39 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇦 加拿大-2.65MB/s(Youtube:不良林), server: 134.195.198.252, port: 4444, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
-  - {name: 🇨🇳 中国-8.23MB/s(Youtube:不良林), server: x.mceee.xyz, port: 26031, type: vmess, uuid: bca2b267-61ac-3152-9525-ea1757f8d9f2, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-2.83MB/s(Youtube:不良林), server: cm-jm.okvpn.xyz, port: 20005, type: trojan, password: e5cf7069-e269-4926-bdb0-fbb39cde6a3a, sni: cm-jm.okvpn.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-476.9KB/s(Youtube:不良林), server: z-cn2.mceee.xyz, port: 23331, type: vmess, uuid: bca2b267-61ac-3152-9525-ea1757f8d9f2, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /download, ws-headers: {Host: z-cn2.mceee.xyz}}
+  - {name: 🇨🇦 加拿大-248.6KB/s(Youtube:不良林), server: 134.195.198.252, port: 4444, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
+  - {name: 🇨🇳 中国-1.57MB/s(Youtube:不良林), server: cm-jm.okvpn.xyz, port: 20005, type: trojan, password: e5cf7069-e269-4926-bdb0-fbb39cde6a3a, sni: cm-jm.okvpn.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-2.57MB/s(Youtube:不良林), server: z-cn2.mceee.xyz, port: 24935, type: vmess, uuid: bca2b267-61ac-3152-9525-ea1757f8d9f2, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /download, ws-headers: {Host: z-cn2.mceee.xyz}}
+  - {name: 🇦🇺 澳大利亚-1.97MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-2.65MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.23MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.83MB/s(Youtube:不良林)
-      - 🇨🇳 中国-476.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-248.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.57MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.57MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.97MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇦 加拿大-2.65MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.23MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.83MB/s(Youtube:不良林)
-      - 🇨🇳 中国-476.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-248.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.57MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.57MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.97MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-2.65MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.23MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.83MB/s(Youtube:不良林)
-      - 🇨🇳 中国-476.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-248.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.57MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.57MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.97MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -48,29 +48,29 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇦 加拿大-2.65MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.23MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.83MB/s(Youtube:不良林)
-      - 🇨🇳 中国-476.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-248.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.57MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.57MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.97MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-2.65MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.23MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.83MB/s(Youtube:不良林)
-      - 🇨🇳 中国-476.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-248.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.57MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.57MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.97MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-2.65MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.23MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.83MB/s(Youtube:不良林)
-      - 🇨🇳 中国-476.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-248.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.57MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.57MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.97MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -86,10 +86,10 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-2.65MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.23MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.83MB/s(Youtube:不良林)
-      - 🇨🇳 中国-476.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-248.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.57MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.57MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.97MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
