--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,43 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-1.82MB/s(Youtube:不良林), server: cm-jm.okvpn.xyz, port: 20005, type: trojan, password: e5cf7069-e269-4926-bdb0-fbb39cde6a3a, sni: cm-jm.okvpn.xyz, skip-cert-verify: true}
   - {name: 🇷🇺 俄罗斯联邦-2.11MB/s(Youtube:不良林), server: 185.4.65.6, port: 21247, type: ss, cipher: aes-256-cfb, password: vDS9G2p}
-  - {name: 🇬🇧 英国-2.91MB/s(Youtube:不良林), server: jgwld1.gaox.ml, port: 443, type: trojan, password: 02e653c9-7c93-46a9-999d-11834bd0c577, sni: jgwld1.gaox.ml, skip-cert-verify: true}
-  - {name: 🇮🇳 印度-538.8KB/s(Youtube:不良林), server: jgwhdlb1.gaox.ml, port: 443, type: trojan, password: e05c749b-7c6b-41b8-9c71-9dcf685edf4a, sni: jgwhdlb1.gaox.ml, skip-cert-verify: true}
   - {name: 🇦🇺 澳大利亚-1.44MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-20.31MB/s(Youtube:不良林), server: gy.cwcsrsyby.xyz, port: 47514, type: vmess, uuid: 140663cb-e2ea-39ca-8a85-040968d9de44, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-1.82MB/s(Youtube:不良林), server: cm-jm.okvpn.xyz, port: 20005, type: trojan, password: e5cf7069-e269-4926-bdb0-fbb39cde6a3a, sni: cm-jm.okvpn.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-1.66MB/s(Youtube:不良林), server: cm-jm.okvpn.xyz, port: 20006, type: trojan, password: e5cf7069-e269-4926-bdb0-fbb39cde6a3a, sni: cm-jm.okvpn.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-6.84MB/s(Youtube:不良林), server: 116.129.253.191, port: 3389, type: trojan, password: e37c6d7efa845d60, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-10.47MB/s(Youtube:不良林), server: 116.129.253.191, port: 3389, type: trojan, password: a170b44c2dfac9e6, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-13.57MB/s(Youtube:不良林), server: www.tokyo2021.ga, port: 443, type: trojan, password: 2e5f2a78-14d8-11e7a990132-cf76-4ac2-8a3c-681743fa8627, sni: www.tokyo2021.ga, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-2.88MB/s(Youtube:不良林), server: www.tokyo2021.ga, port: 443, type: trojan, password: YWVzLTI1Ni1nY206eH7a990132-cf76-4ac2-8a3c-681743fa8627, sni: www.tokyo2021.ga, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-10.39MB/s(Youtube:不良林), server: ca-trojan.bonds.id, port: 443, type: trojan, password: ac5a3ef0-b4ab-11eb-b65e-1239d0255272, sni: ca-trojan.bonds.id, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-1.82MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-2.11MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.91MB/s(Youtube:不良林)
-      - 🇮🇳 印度-538.8KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.44MB/s(Youtube:不良林)
+      - 🇨🇳 中国-20.31MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.82MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.66MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.84MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.47MB/s(Youtube:不良林)
+      - 🇨🇳 中国-13.57MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.88MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-10.39MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-1.82MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-2.11MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.91MB/s(Youtube:不良林)
-      - 🇮🇳 印度-538.8KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.44MB/s(Youtube:不良林)
+      - 🇨🇳 中国-20.31MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.82MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.66MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.84MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.47MB/s(Youtube:不良林)
+      - 🇨🇳 中国-13.57MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.88MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-10.39MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-1.82MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-2.11MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.91MB/s(Youtube:不良林)
-      - 🇮🇳 印度-538.8KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.44MB/s(Youtube:不良林)
+      - 🇨🇳 中国-20.31MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.82MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.66MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.84MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.47MB/s(Youtube:不良林)
+      - 🇨🇳 中国-13.57MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.88MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-10.39MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -52,32 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-1.82MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-2.11MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.91MB/s(Youtube:不良林)
-      - 🇮🇳 印度-538.8KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.44MB/s(Youtube:不良林)
+      - 🇨🇳 中国-20.31MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.82MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.66MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.84MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.47MB/s(Youtube:不良林)
+      - 🇨🇳 中国-13.57MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.88MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-10.39MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-1.82MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-2.11MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.91MB/s(Youtube:不良林)
-      - 🇮🇳 印度-538.8KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.44MB/s(Youtube:不良林)
+      - 🇨🇳 中国-20.31MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.82MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.66MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.84MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.47MB/s(Youtube:不良林)
+      - 🇨🇳 中国-13.57MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.88MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-10.39MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-1.82MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-2.11MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.91MB/s(Youtube:不良林)
-      - 🇮🇳 印度-538.8KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.44MB/s(Youtube:不良林)
+      - 🇨🇳 中国-20.31MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.82MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.66MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.84MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.47MB/s(Youtube:不良林)
+      - 🇨🇳 中国-13.57MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.88MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-10.39MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -93,11 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-1.82MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-2.11MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.91MB/s(Youtube:不良林)
-      - 🇮🇳 印度-538.8KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.44MB/s(Youtube:不良林)
+      - 🇨🇳 中国-20.31MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.82MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.66MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.84MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.47MB/s(Youtube:不良林)
+      - 🇨🇳 中国-13.57MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.88MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-10.39MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
