--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-20.31MB/s(Youtube:不良林), server: gy.cwcsrsyby.xyz, port: 47514, type: vmess, uuid: 140663cb-e2ea-39ca-8a85-040968d9de44, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-13.57MB/s(Youtube:不良林), server: www.tokyo2021.ga, port: 443, type: trojan, password: 2e5f2a78-14d8-11e7a990132-cf76-4ac2-8a3c-681743fa8627, sni: www.tokyo2021.ga, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-750.5KB/s(Youtube:不良林), server: 134.195.198.252, port: 4444, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
-  - {name: 🇨🇳 中国-1.66MB/s(Youtube:不良林), server: cm-jm.okvpn.xyz, port: 20006, type: trojan, password: e5cf7069-e269-4926-bdb0-fbb39cde6a3a, sni: cm-jm.okvpn.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-6.84MB/s(Youtube:不良林), server: 116.129.253.191, port: 3389, type: trojan, password: e37c6d7efa845d60, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-10.39MB/s(Youtube:不良林), server: ca-trojan.bonds.id, port: 443, type: trojan, password: ac5a3ef0-b4ab-11eb-b65e-1239d0255272, sni: ca-trojan.bonds.id, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-1.12MB/s(Youtube:不良林), server: cm-jm.okvpn.xyz, port: 20003, type: trojan, password: e5cf7069-e269-4926-bdb0-fbb39cde6a3a, sni: cm-jm.okvpn.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-329.9KB/s(Youtube:不良林), server: nas5.travelerv2.xyz, port: 21871, type: vmess, uuid: b69f3735-a1a1-3dbf-889b-4594d140752f, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: nas5.travelerv2.xyz}}
-  - {name: 🇨🇳 中国-9.16MB/s(Youtube:不良林), server: cs.daxun.cyou, port: 20631, type: vmess, uuid: 99591e4d-b11e-4488-b366-53f3b6787bba, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hinet04, ws-headers: {Host: cs.daxun.cyou}}
-  - {name: 🇬🇧 英国-1.35MB/s(Youtube:不良林), server: jgwld1.gaox.ml, port: 443, type: trojan, password: 02e653c9-7c93-46a9-999d-11834bd0c577, sni: jgwld1.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-1.93MB/s(Youtube:不良林), server: 134.195.198.252, port: 4444, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
+  - {name: 🇨🇳 中国-1.54MB/s(Youtube:不良林), server: cm-jm.okvpn.xyz, port: 20005, type: trojan, password: e5cf7069-e269-4926-bdb0-fbb39cde6a3a, sni: cm-jm.okvpn.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-8.42MB/s(Youtube:不良林), server: 116.129.253.191, port: 3389, type: trojan, password: e37c6d7efa845d60, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-2.14MB/s(Youtube:不良林), server: gy.cwcsrsyby.xyz, port: 47514, type: vmess, uuid: 140663cb-e2ea-39ca-8a85-040968d9de44, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-7.38MB/s(Youtube:不良林), server: 116.129.253.191, port: 3389, type: trojan, password: a170b44c2dfac9e6, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-374.1KB/s(Youtube:不良林), server: cm-jm.okvpn.xyz, port: 20003, type: trojan, password: e5cf7069-e269-4926-bdb0-fbb39cde6a3a, sni: cm-jm.okvpn.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-331.4KB/s(Youtube:不良林), server: nas5.travelerv2.xyz, port: 21871, type: vmess, uuid: b69f3735-a1a1-3dbf-889b-4594d140752f, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: nas5.travelerv2.xyz}}
+  - {name: 🇨🇳 中国-8.31MB/s(Youtube:不良林), server: cs.daxun.cyou, port: 20631, type: vmess, uuid: 99591e4d-b11e-4488-b366-53f3b6787bba, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hinet04, ws-headers: {Host: cs.daxun.cyou}}
+  - {name: 🇨🇳 中国-7.43MB/s(Youtube:不良林), server: 116.129.253.227, port: 3389, type: trojan, password: e37c6d7efa845d60, skip-cert-verify: true}
+  - {name: 🇩🇪 德国-2.25MB/s(Youtube:不良林), server: 49.12.203.80, port: 40960, type: ss, cipher: aes-256-gcm, password: 6kA7b3f9Aw2508erQ3W7D4}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-20.31MB/s(Youtube:不良林)
-      - 🇨🇳 中国-13.57MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-750.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.66MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.84MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-10.39MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.12MB/s(Youtube:不良林)
-      - 🇨🇳 中国-329.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.16MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.35MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.93MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.54MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.42MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.38MB/s(Youtube:不良林)
+      - 🇨🇳 中国-374.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-331.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.31MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.43MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.25MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-20.31MB/s(Youtube:不良林)
-      - 🇨🇳 中国-13.57MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-750.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.66MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.84MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-10.39MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.12MB/s(Youtube:不良林)
-      - 🇨🇳 中国-329.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.16MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.35MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.93MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.54MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.42MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.38MB/s(Youtube:不良林)
+      - 🇨🇳 中国-374.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-331.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.31MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.43MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.25MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-20.31MB/s(Youtube:不良林)
-      - 🇨🇳 中国-13.57MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-750.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.66MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.84MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-10.39MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.12MB/s(Youtube:不良林)
-      - 🇨🇳 中国-329.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.16MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.35MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.93MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.54MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.42MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.38MB/s(Youtube:不良林)
+      - 🇨🇳 中国-374.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-331.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.31MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.43MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.25MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-20.31MB/s(Youtube:不良林)
-      - 🇨🇳 中国-13.57MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-750.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.66MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.84MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-10.39MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.12MB/s(Youtube:不良林)
-      - 🇨🇳 中国-329.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.16MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.35MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.93MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.54MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.42MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.38MB/s(Youtube:不良林)
+      - 🇨🇳 中国-374.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-331.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.31MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.43MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.25MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-20.31MB/s(Youtube:不良林)
-      - 🇨🇳 中国-13.57MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-750.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.66MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.84MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-10.39MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.12MB/s(Youtube:不良林)
-      - 🇨🇳 中国-329.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.16MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.35MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.93MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.54MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.42MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.38MB/s(Youtube:不良林)
+      - 🇨🇳 中国-374.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-331.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.31MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.43MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.25MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-20.31MB/s(Youtube:不良林)
-      - 🇨🇳 中国-13.57MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-750.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.66MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.84MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-10.39MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.12MB/s(Youtube:不良林)
-      - 🇨🇳 中国-329.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.16MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.35MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.93MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.54MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.42MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.38MB/s(Youtube:不良林)
+      - 🇨🇳 中国-374.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-331.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.31MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.43MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.25MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-20.31MB/s(Youtube:不良林)
-      - 🇨🇳 中国-13.57MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-750.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.66MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.84MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-10.39MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.12MB/s(Youtube:不良林)
-      - 🇨🇳 中国-329.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.16MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.35MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.93MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.54MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.42MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.38MB/s(Youtube:不良林)
+      - 🇨🇳 中国-374.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-331.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.31MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.43MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.25MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
