--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇦 加拿大-1.93MB/s(Youtube:不良林), server: 134.195.198.252, port: 4444, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
-  - {name: 🇨🇳 中国-1.54MB/s(Youtube:不良林), server: cm-jm.okvpn.xyz, port: 20005, type: trojan, password: e5cf7069-e269-4926-bdb0-fbb39cde6a3a, sni: cm-jm.okvpn.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-8.42MB/s(Youtube:不良林), server: 116.129.253.191, port: 3389, type: trojan, password: e37c6d7efa845d60, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-2.14MB/s(Youtube:不良林), server: gy.cwcsrsyby.xyz, port: 47514, type: vmess, uuid: 140663cb-e2ea-39ca-8a85-040968d9de44, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-7.38MB/s(Youtube:不良林), server: 116.129.253.191, port: 3389, type: trojan, password: a170b44c2dfac9e6, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-374.1KB/s(Youtube:不良林), server: cm-jm.okvpn.xyz, port: 20003, type: trojan, password: e5cf7069-e269-4926-bdb0-fbb39cde6a3a, sni: cm-jm.okvpn.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-331.4KB/s(Youtube:不良林), server: nas5.travelerv2.xyz, port: 21871, type: vmess, uuid: b69f3735-a1a1-3dbf-889b-4594d140752f, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: nas5.travelerv2.xyz}}
-  - {name: 🇨🇳 中国-8.31MB/s(Youtube:不良林), server: cs.daxun.cyou, port: 20631, type: vmess, uuid: 99591e4d-b11e-4488-b366-53f3b6787bba, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hinet04, ws-headers: {Host: cs.daxun.cyou}}
-  - {name: 🇨🇳 中国-7.43MB/s(Youtube:不良林), server: 116.129.253.227, port: 3389, type: trojan, password: e37c6d7efa845d60, skip-cert-verify: true}
-  - {name: 🇩🇪 德国-2.25MB/s(Youtube:不良林), server: 49.12.203.80, port: 40960, type: ss, cipher: aes-256-gcm, password: 6kA7b3f9Aw2508erQ3W7D4}
+  - {name: 🇨🇳 中国-1.36MB/s(Youtube:不良林), server: cm-jm.okvpn.xyz, port: 20005, type: trojan, password: e5cf7069-e269-4926-bdb0-fbb39cde6a3a, sni: cm-jm.okvpn.xyz, skip-cert-verify: true}
+  - {name: 🇩🇪 德国-251.0KB/s(Youtube:不良林), server: 49.12.203.80, port: 40960, type: ss, cipher: aes-256-gcm, password: 6kA7b3f9Aw2508erQ3W7D4}
+  - {name: 🇨🇳 中国-12.41MB/s(Youtube:不良林), server: iepl-zebra.19900101.xyz, port: 4501, type: vmess, uuid: 1cfaa36d-9912-3433-b9bc-fd5b5085613d, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-9.94MB/s(Youtube:不良林), server: 116.129.253.227, port: 3389, type: trojan, password: e37c6d7efa845d60, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-5.23MB/s(Youtube:不良林), server: cs.daxun.cyou, port: 20631, type: vmess, uuid: 99591e4d-b11e-4488-b366-53f3b6787bba, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hinet04, ws-headers: {Host: cs.daxun.cyou}}
+  - {name: 🇨🇳 中国-8.50MB/s(Youtube:不良林), server: iepl-zebra.19900101.xyz, port: 777, type: vmess, uuid: 1cfaa36d-9912-3433-b9bc-fd5b5085613d, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-299.2KB/s(Youtube:不良林), server: nas5.travelerv2.xyz, port: 21871, type: vmess, uuid: b69f3735-a1a1-3dbf-889b-4594d140752f, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: nas5.travelerv2.xyz}}
+  - {name: 🇨🇳 中国-299.0KB/s(Youtube:不良林), server: gy.cwcsrsyby.xyz, port: 47514, type: vmess, uuid: 140663cb-e2ea-39ca-8a85-040968d9de44, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇮🇳 印度-242.7KB/s(Youtube:不良林), server: 206.189.136.113, port: 46786, type: ss, cipher: chacha20-ietf-poly1305, password: 5e04bdc6-6f09-4f5e-a3c7-edf4d3220ad3}
+  - {name: 🇨🇳 中国-4.91MB/s(Youtube:不良林), server: iepl7.dcnode.me, port: 10037, type: ss, cipher: aes-128-gcm, password: d307b05c-2341-4ffa-b376-9d3a46cf7ac9}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-1.93MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.54MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.42MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.38MB/s(Youtube:不良林)
-      - 🇨🇳 中国-374.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-331.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.31MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.43MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.25MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.36MB/s(Youtube:不良林)
+      - 🇩🇪 德国-251.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-12.41MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.94MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.23MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.50MB/s(Youtube:不良林)
+      - 🇨🇳 中国-299.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-299.0KB/s(Youtube:不良林)
+      - 🇮🇳 印度-242.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.91MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇦 加拿大-1.93MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.54MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.42MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.38MB/s(Youtube:不良林)
-      - 🇨🇳 中国-374.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-331.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.31MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.43MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.25MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.36MB/s(Youtube:不良林)
+      - 🇩🇪 德国-251.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-12.41MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.94MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.23MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.50MB/s(Youtube:不良林)
+      - 🇨🇳 中国-299.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-299.0KB/s(Youtube:不良林)
+      - 🇮🇳 印度-242.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.91MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-1.93MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.54MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.42MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.38MB/s(Youtube:不良林)
-      - 🇨🇳 中国-374.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-331.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.31MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.43MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.25MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.36MB/s(Youtube:不良林)
+      - 🇩🇪 德国-251.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-12.41MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.94MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.23MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.50MB/s(Youtube:不良林)
+      - 🇨🇳 中国-299.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-299.0KB/s(Youtube:不良林)
+      - 🇮🇳 印度-242.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.91MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇦 加拿大-1.93MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.54MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.42MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.38MB/s(Youtube:不良林)
-      - 🇨🇳 中国-374.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-331.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.31MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.43MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.25MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.36MB/s(Youtube:不良林)
+      - 🇩🇪 德国-251.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-12.41MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.94MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.23MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.50MB/s(Youtube:不良林)
+      - 🇨🇳 中国-299.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-299.0KB/s(Youtube:不良林)
+      - 🇮🇳 印度-242.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.91MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-1.93MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.54MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.42MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.38MB/s(Youtube:不良林)
-      - 🇨🇳 中国-374.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-331.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.31MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.43MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.25MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.36MB/s(Youtube:不良林)
+      - 🇩🇪 德国-251.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-12.41MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.94MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.23MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.50MB/s(Youtube:不良林)
+      - 🇨🇳 中国-299.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-299.0KB/s(Youtube:不良林)
+      - 🇮🇳 印度-242.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.91MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-1.93MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.54MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.42MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.38MB/s(Youtube:不良林)
-      - 🇨🇳 中国-374.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-331.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.31MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.43MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.25MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.36MB/s(Youtube:不良林)
+      - 🇩🇪 德国-251.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-12.41MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.94MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.23MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.50MB/s(Youtube:不良林)
+      - 🇨🇳 中国-299.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-299.0KB/s(Youtube:不良林)
+      - 🇮🇳 印度-242.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.91MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-1.93MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.54MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.42MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.38MB/s(Youtube:不良林)
-      - 🇨🇳 中国-374.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-331.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.31MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.43MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.25MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.36MB/s(Youtube:不良林)
+      - 🇩🇪 德国-251.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-12.41MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.94MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.23MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.50MB/s(Youtube:不良林)
+      - 🇨🇳 中国-299.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-299.0KB/s(Youtube:不良林)
+      - 🇮🇳 印度-242.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.91MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
